# RoutedHub-HomePage

./: Cargo.toml  README.md  bonnie.toml  index.html  tailwind.config.js
src/: main.css  main.rs  page.rs  router.rs
src/component/: footer.rs  header.rs  landing.rs  mod.rs
