[package]
name = "routed-hub-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
chrono = "0.4.19"
yew-router = "0.17.0"
strum = "0.22.0"
strum_macros = "0.22.0"
